apps/services/media/prowlarr/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app: prowlarr
  annotations:
    tailscale.com/hostname: "prowlarr"
spec:
  selector:
    app: prowlarr
  ports:
    - name: web
      port: 80
      targetPort: 9696
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
